// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`viewMessagesPageSaga Saga fetchUser saga group should execute the fetchUserSaga 1`] = `
Object {
  "@@redux-saga/IO": true,
  "FORK": Object {
    "args": Array [
      "app/ViewMessagesPage/REQUEST_USER",
      [Function],
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`viewMessagesPageSaga Saga fetchUser saga group should execute the fetchUserStart 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "localhost:3001/api/v1/users/?uuid=2f67b460-6469-11e9-b132-2b223266dc25",
      [Function],
      [Function],
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`viewMessagesPageSaga Saga fetchUserMessages saga group should execute the fetchUserMessagesSaga 1`] = `
Object {
  "@@redux-saga/IO": true,
  "FORK": Object {
    "args": Array [
      "app/ViewMessagesPage/REQUEST_USER_MESSAGES",
      [Function],
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`viewMessagesPageSaga Saga fetchUserMessages saga group should execute the fetchUserMessagesStart 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "localhost:3001/api/v1/messagesByUser/?userUuid=2f67b460-6469-11e9-b132-2b223266dc25",
      [Function],
      [Function],
      [Function],
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`viewMessagesPageSaga Saga rootSaga saga should execute the rootSaga 1`] = `
Object {
  "@@redux-saga/IO": true,
  "ALL": Array [
    GeneratorFunctionPrototype {
      "_invoke": [Function],
    },
    GeneratorFunctionPrototype {
      "_invoke": [Function],
    },
    GeneratorFunctionPrototype {
      "_invoke": [Function],
    },
  ],
}
`;

exports[`viewMessagesPageSaga Saga selectedUserMessages saga group should execute the selectedUserMessagesSaga 1`] = `
Object {
  "@@redux-saga/IO": true,
  "FORK": Object {
    "args": Array [
      "app/ViewMessagesPage/SELECT_USER_MESSAGE",
      [Function],
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[`viewMessagesPageSaga Saga selectedUserMessages saga group should execute the selectedUserMessagesStart 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      [Function],
      [Function],
      Object {
        "uuid": "test",
      },
      [Function],
      [Function],
    ],
    "context": null,
    "fn": [Function],
  },
}
`;
